using FluentAssertions;
using PlayHouse.Connector.Protocol;
using PlayHouse.TestServer.Proto;
using Xunit;

namespace PlayHouse.Connector.IntegrationTests.CoreTests;

/// <summary>
/// C-05: Echo Request-Response í…ŒìŠ¤íŠ¸
/// </summary>
/// <remarks>
/// ê¸°ë³¸ì ì¸ Request-Response íŒ¨í„´ì´ ì •ìƒ ë™ì‘í•˜ëŠ”ì§€ ê²€ì¦í•©ë‹ˆë‹¤.
/// EchoRequestë¥¼ ë³´ë‚´ê³  EchoReplyë¥¼ ë°›ì•„ ë‚´ìš©ì´ ì¼ì¹˜í•˜ëŠ”ì§€ í™•ì¸í•©ë‹ˆë‹¤.
/// </remarks>
public class C05_EchoRequestResponseTests : BaseIntegrationTest
{
    public C05_EchoRequestResponseTests(TestServerFixture testServer) : base(testServer)
    {
    }

    [Fact(DisplayName = "C-05-01: Echo Request-Responseê°€ ì •ìƒ ë™ì‘í•œë‹¤")]
    public async Task EchoRequest_SendAndReceive_ReturnsMatchingReply()
    {
        // Given: ì—°ê²° ë° ì¸ì¦ ì™„ë£Œ
        await CreateStageAndConnectAsync();
        await AuthenticateAsync("echoUser");

        var testContent = "Hello PlayHouse!";
        var testSequence = 42;

        // When: Echo ìš”ì²­
        var echoReply = await EchoAsync(testContent, testSequence);

        // Then: ì‘ë‹µì´ ìš”ì²­ê³¼ ì¼ì¹˜í•´ì•¼ í•¨
        echoReply.Should().NotBeNull("Echo ì‘ë‹µì´ ë°˜í™˜ë˜ì–´ì•¼ í•¨");
        echoReply.Content.Should().Be(testContent, "ë‚´ìš©ì´ ì—ì½”ë˜ì–´ì•¼ í•¨");
        echoReply.Sequence.Should().Be(testSequence, "ì‹œí€€ìŠ¤ê°€ ì—ì½”ë˜ì–´ì•¼ í•¨");
        echoReply.ProcessedAt.Should().BeGreaterThan(0, "ì²˜ë¦¬ ì‹œê°„ì´ ê¸°ë¡ë˜ì–´ì•¼ í•¨");
    }

    [Fact(DisplayName = "C-05-02: RequestAsyncë¡œ Echo ìš”ì²­í•  ìˆ˜ ìˆë‹¤")]
    public async Task RequestAsync_WithEchoRequest_ReturnsEchoReply()
    {
        // Given: ì—°ê²° ë° ì¸ì¦ ì™„ë£Œ
        await CreateStageAndConnectAsync();
        await AuthenticateAsync("asyncUser");

        var echoRequest = new EchoRequest
        {
            Content = "Async Echo Test",
            Sequence = 1
        };

        // When: RequestAsync í˜¸ì¶œ
        using var requestPacket = new Packet(echoRequest);
        var responsePacket = await Connector!.RequestAsync(requestPacket);

        // Then: ì˜¬ë°”ë¥¸ ì‘ë‹µì„ ë°›ì•„ì•¼ í•¨
        responsePacket.Should().NotBeNull();
        responsePacket.MsgId.Should().Be("EchoReply", "ì‘ë‹µ ë©”ì‹œì§€ íƒ€ì…ì´ ì¼ì¹˜í•´ì•¼ í•¨");

        var echoReply = ParsePayload<EchoReply>(responsePacket.Payload);
        echoReply.Content.Should().Be("Async Echo Test");
        echoReply.Sequence.Should().Be(1);
    }

    [Fact(DisplayName = "C-05-03: Request ì½œë°± ë°©ì‹ìœ¼ë¡œ Echo ìš”ì²­í•  ìˆ˜ ìˆë‹¤")]
    public async Task Request_WithCallback_ReceivesEchoReply()
    {
        // Given: ì—°ê²° ë° ì¸ì¦ ì™„ë£Œ
        await CreateStageAndConnectAsync();
        await AuthenticateAsync("callbackUser");

        var echoRequest = new EchoRequest
        {
            Content = "Callback Echo Test",
            Sequence = 100
        };

        var tcs = new TaskCompletionSource<EchoReply>();

        // When: Request ì½œë°± ë°©ì‹ í˜¸ì¶œ
        using var requestPacket = new Packet(echoRequest);
        Connector!.Request(requestPacket, responsePacket =>
        {
            var echoReply = ParsePayload<EchoReply>(responsePacket.Payload);
            tcs.TrySetResult(echoReply);
        });

        // ì½œë°± ëŒ€ê¸° (MainThreadAction í˜¸ì¶œí•˜ë©´ì„œ ìµœëŒ€ 5ì´ˆ)
        EchoReply echoReply;
        try
        {
            echoReply = await WaitWithMainThreadActionAsync(tcs, 5000);
        }
        catch (TimeoutException)
        {
            true.Should().BeFalse("ì½œë°±ì´ 5ì´ˆ ì´ë‚´ì— í˜¸ì¶œë˜ì–´ì•¼ í•¨");
            return;
        }

        // Then: ì½œë°±ì´ í˜¸ì¶œë˜ê³  ì˜¬ë°”ë¥¸ ì‘ë‹µì„ ë°›ì•„ì•¼ í•¨
        echoReply.Content.Should().Be("Callback Echo Test");
        echoReply.Sequence.Should().Be(100);
    }

    [Fact(DisplayName = "C-05-04: ì—°ì†ëœ Echo ìš”ì²­ì„ ì²˜ë¦¬í•  ìˆ˜ ìˆë‹¤")]
    public async Task EchoRequest_Sequential_AllSucceed()
    {
        // Given: ì—°ê²° ë° ì¸ì¦ ì™„ë£Œ
        await CreateStageAndConnectAsync();
        await AuthenticateAsync("sequentialUser");

        // When: 5ê°œì˜ ì—°ì†ëœ Echo ìš”ì²­
        var replies = new List<EchoReply>();
        for (int i = 1; i <= 5; i++)
        {
            var reply = await EchoAsync($"Message {i}", i);
            replies.Add(reply);
        }

        // Then: ëª¨ë“  ì‘ë‹µì´ ìˆœì„œëŒ€ë¡œ ì˜¬ë°”ë¥´ê²Œ ë°˜í™˜ë˜ì–´ì•¼ í•¨
        replies.Should().HaveCount(5, "5ê°œì˜ ì‘ë‹µì„ ë°›ì•„ì•¼ í•¨");
        for (int i = 0; i < 5; i++)
        {
            replies[i].Content.Should().Be($"Message {i + 1}", $"{i + 1}ë²ˆì§¸ ë‚´ìš©ì´ ì¼ì¹˜í•´ì•¼ í•¨");
            replies[i].Sequence.Should().Be(i + 1, $"{i + 1}ë²ˆì§¸ ì‹œí€€ìŠ¤ê°€ ì¼ì¹˜í•´ì•¼ í•¨");
        }
    }

    [Fact(DisplayName = "C-05-05: ë³‘ë ¬ Echo ìš”ì²­ì„ ì²˜ë¦¬í•  ìˆ˜ ìˆë‹¤")]
    public async Task EchoRequest_Parallel_AllSucceed()
    {
        // Given: ì—°ê²° ë° ì¸ì¦ ì™„ë£Œ
        await CreateStageAndConnectAsync();
        await AuthenticateAsync("parallelUser");

        // When: 10ê°œì˜ ë³‘ë ¬ Echo ìš”ì²­
        var tasks = Enumerable.Range(1, 10)
            .Select(i => EchoAsync($"Parallel {i}", i))
            .ToArray();

        var replies = await Task.WhenAll(tasks);

        // Then: ëª¨ë“  ì‘ë‹µì´ ì˜¬ë°”ë¥´ê²Œ ë°˜í™˜ë˜ì–´ì•¼ í•¨
        replies.Should().HaveCount(10, "10ê°œì˜ ì‘ë‹µì„ ë°›ì•„ì•¼ í•¨");
        for (int i = 0; i < 10; i++)
        {
            var expectedSequence = i + 1;
            var reply = replies.First(r => r.Sequence == expectedSequence);
            reply.Content.Should().Be($"Parallel {expectedSequence}");
        }
    }

    [Fact(DisplayName = "C-05-06: ë¹ˆ ë¬¸ìì—´ë„ ì—ì½”í•  ìˆ˜ ìˆë‹¤")]
    public async Task EchoRequest_WithEmptyString_ReturnsEmptyString()
    {
        // Given: ì—°ê²° ë° ì¸ì¦ ì™„ë£Œ
        await CreateStageAndConnectAsync();
        await AuthenticateAsync("emptyUser");

        // When: ë¹ˆ ë¬¸ìì—´ë¡œ Echo ìš”ì²­
        var echoReply = await EchoAsync("", 999);

        // Then: ë¹ˆ ë¬¸ìì—´ì´ ì—ì½”ë˜ì–´ì•¼ í•¨
        echoReply.Content.Should().BeEmpty("ë¹ˆ ë¬¸ìì—´ì´ ì—ì½”ë˜ì–´ì•¼ í•¨");
        echoReply.Sequence.Should().Be(999);
    }

    [Fact(DisplayName = "C-05-07: ê¸´ ë¬¸ìì—´ë„ ì—ì½”í•  ìˆ˜ ìˆë‹¤")]
    public async Task EchoRequest_WithLongString_ReturnsFullString()
    {
        // Given: ì—°ê²° ë° ì¸ì¦ ì™„ë£Œ
        await CreateStageAndConnectAsync();
        await AuthenticateAsync("longUser");

        // 1KB ë¬¸ìì—´ ìƒì„±
        var longContent = new string('A', 1024);

        // When: ê¸´ ë¬¸ìì—´ë¡œ Echo ìš”ì²­
        var echoReply = await EchoAsync(longContent, 1);

        // Then: ì „ì²´ ë¬¸ìì—´ì´ ì—ì½”ë˜ì–´ì•¼ í•¨
        echoReply.Content.Should().Be(longContent, "ê¸´ ë¬¸ìì—´ì´ ì™„ì „íˆ ì—ì½”ë˜ì–´ì•¼ í•¨");
        echoReply.Content.Length.Should().Be(1024, "ë¬¸ìì—´ ê¸¸ì´ê°€ ìœ ì§€ë˜ì–´ì•¼ í•¨");
    }

    [Fact(DisplayName = "C-05-08: ìœ ë‹ˆì½”ë“œ ë¬¸ìì—´ë„ ì—ì½”í•  ìˆ˜ ìˆë‹¤")]
    public async Task EchoRequest_WithUnicodeString_ReturnsCorrectString()
    {
        // Given: ì—°ê²° ë° ì¸ì¦ ì™„ë£Œ
        await CreateStageAndConnectAsync();
        await AuthenticateAsync("unicodeUser");

        var unicodeContent = "ì•ˆë…•í•˜ì„¸ìš” ğŸ® ã“ã‚“ã«ã¡ã¯ ä½ å¥½";

        // When: ìœ ë‹ˆì½”ë“œ ë¬¸ìì—´ë¡œ Echo ìš”ì²­
        var echoReply = await EchoAsync(unicodeContent, 1);

        // Then: ìœ ë‹ˆì½”ë“œ ë¬¸ìì—´ì´ ì˜¬ë°”ë¥´ê²Œ ì—ì½”ë˜ì–´ì•¼ í•¨
        echoReply.Content.Should().Be(unicodeContent, "ìœ ë‹ˆì½”ë“œ ë¬¸ìì—´ì´ ì •í™•íˆ ì—ì½”ë˜ì–´ì•¼ í•¨");
    }

    [Fact(DisplayName = "C-05-09: ì‘ë‹µ ë©”ì‹œì§€ íƒ€ì…ì´ ì˜¬ë°”ë¥´ë‹¤")]
    public async Task EchoRequest_ResponseMessageType_IsCorrect()
    {
        // Given: ì—°ê²° ë° ì¸ì¦ ì™„ë£Œ
        await CreateStageAndConnectAsync();
        await AuthenticateAsync("typeCheckUser");

        var echoRequest = new EchoRequest
        {
            Content = "Type Check",
            Sequence = 1
        };

        // When: Echo ìš”ì²­
        using var requestPacket = new Packet(echoRequest);
        var responsePacket = await Connector!.RequestAsync(requestPacket);

        // Then: ì‘ë‹µ ë©”ì‹œì§€ íƒ€ì…ì´ EchoReplyì—¬ì•¼ í•¨
        responsePacket.MsgId.Should().Be("EchoReply", "ì‘ë‹µ ë©”ì‹œì§€ íƒ€ì…ì´ EchoReplyì—¬ì•¼ í•¨");
    }
}
